[tool.poetry]
name = "segment-anything"
version = "0.1.0"
description = ""
authors = ["hobbymarks <ihobbymarks@gmail.com>"]
readme = "README.md"
packages = [{include = "segment_anything"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
pycocotools = "^2.0.6"
matplotlib = "^3.7.1"
onnxruntime = "^1.14.1"
onnx = "^1.13.1"
jupyterlab = "^3.6.3"
jupyterlab-code-formatter = "^1.6.0"
jupyterlab-execute-time = "^2.3.1"
isort = "^5.12.0"
yapf = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
